--- a/DBdevops-master/DBdevops-master/devopsIQ/index.html
+++ b/DBdevops-master/DBdevops-master/devopsIQ/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Jenkins Updated Website</title>
+<title>Jenkins edited Website</title>
 <body background="images/2.jpeg">
 <h1>This is webhook triggered website!!<h1>
 <h1>edited by kalai !!<h1>
